# media-player-gst

./: CMakeLists.txt  README.md  main.c  settings.c  settings.h  state.c  state.h  utils.c  utils.h
